cmake_minimum_required(VERSION 3.10)
project(factory-mode)


add_executable(01virtual_function       01virtual_function.cc)
add_executable(01virtual_function_bug   01virtual_function_bug.cc)
add_executable(02virtual_class          02virtual_class.cc)
add_executable(02virtual_class_none     02virtual_class_none.cc)
add_executable(03raii_wrapper           03raii_wrapper.cc)
add_executable(03raii_wrapper_ex        03raii_wrapper_ex.cc)
